// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Remove deployer > should remove the deployer from ./__fixtures__/basic.js 1`] = `
"import { createLogger } from '@mastra/core/logger';
import { Mastra } from '@mastra/core/mastra';
import { createApiRoute } from '@mastra/core/server';
import { TestDeployer } from '@mastra/deployer/test';
import { weatherAgent } from '@/agents';

new Mastra({
  agents: {
    weatherAgent
  },
  logger: createLogger({
    name: "Mastra",
    level: "info"
  }),
  telemetry: {
    enabled: true,
    serviceName: "my-app",
    export: {
      type: "otlp",
      endpoint: "http://localhost:4318"
      // SigNoz local endpoint
    }
  },
  server: {
    port: 3e3,
    timeout: 5e3,
    apiRoutes: [createApiRoute({
      path: "/hello",
      method: "get",
      handler: async (req, res) => {
        res.send("Hello World");
      }
    })]
  },
  deployer: new TestDeployer()
});
const deployer = new TestDeployer();

export { deployer };
"
`;

exports[`Remove deployer > should remove the deployer from ./__fixtures__/basic-with-const.js 1`] = `
"import { createLogger } from '@mastra/core/logger';
import { Mastra } from '@mastra/core/mastra';
import { createApiRoute } from '@mastra/core/server';
import { TestDeployer } from '@mastra/deployer/test';
import { weatherAgent } from '@/agents';

const testDeployer = new TestDeployer();
const telemetry = {
  enabled: true,
  serviceName: "my-app",
  export: {
    type: "otlp",
    endpoint: "http://localhost:4318"
    // SigNoz local endpoint
  }
};
const server = {
  port: 3e3,
  timeout: 5e3,
  apiRoutes: [createApiRoute({
    path: "/hello",
    method: "get",
    handler: async (req, res) => {
      res.send("Hello World");
    }
  })]
};
new Mastra({
  agents: {
    weatherAgent
  },
  logger: createLogger({
    name: "Mastra",
    level: "info"
  }),
  telemetry,
  deployer: testDeployer,
  server
});
const deployer = testDeployer;

export { deployer };
"
`;

exports[`Remove deployer > should remove the deployer from ./__fixtures__/basic-with-exported-const.js 1`] = `
"import { Mastra } from '@mastra/core/mastra';
import { TestDeployer } from '@mastra/deployer/test';
import { weatherAgent } from '@/agents';

const _deployer = new TestDeployer();
new Mastra({
  agents: {
    weatherAgent
  },
  deployer
});
const deployer = _deployer;

export { deployer };
"
`;

exports[`Remove deployer > should remove the deployer from ./__fixtures__/basic-with-function.js 1`] = `
"import { createLogger } from '@mastra/core/logger';
import { Mastra } from '@mastra/core/mastra';
import { createApiRoute } from '@mastra/core/server';
import { testDeployer } from '@mastra/deployer/test';
import { weatherAgent } from '@/agents';

function getDeployer() {
  return testDeployer;
}
function getTelemetryConfig() {
  return {
    enabled: true,
    serviceName: "my-app",
    export: {
      type: "otlp",
      endpoint: "http://localhost:4318"
      // SigNoz local endpoint
    }
  };
}
function getServerOptions() {
  return {
    port: 3e3,
    timeout: 5e3,
    apiRoutes: [createApiRoute({
      path: "/hello",
      method: "get",
      handler: async (req, res) => {
        res.send("Hello World");
      }
    })]
  };
}
new Mastra({
  agents: {
    weatherAgent
  },
  logger: createLogger({
    name: "Mastra",
    level: "info"
  }),
  telemetry: getTelemetryConfig(),
  server: getServerOptions(),
  deployer: getDeployer()
});
const deployer = getDeployer();

export { deployer };
"
`;

exports[`Remove deployer > should remove the deployer from ./__fixtures__/basic-with-import.js 1`] = `
"import { createLogger } from '@mastra/core/logger';
import { Mastra } from '@mastra/core/mastra';
import { testDeployer } from '@mastra/deployer/test';
import { weatherAgent } from '@/agents';
import { serverOptions } from '@/server';
import { telemetryConfig } from '@/telemetry';

new Mastra({
  agents: {
    weatherAgent
  },
  logger: createLogger({
    name: "Mastra",
    level: "info"
  }),
  telemetry: telemetryConfig,
  deployer: testDeployer,
  server: serverOptions
});
const deployer = testDeployer;

export { deployer };
"
`;

exports[`Remove deployer > should remove the deployer from ./__fixtures__/basic-with-spread.js 1`] = `
"import { createLogger } from '@mastra/core/logger';
import { Mastra } from '@mastra/core/mastra';
import { TestDeployer } from '@mastra/deployer/test';

const configLogger = {
  logger: createLogger({
    name: "yo",
    level: "info"
  })
};
const configDeployer = {
  deployer: new TestDeployer({
    name: "yo"
  })
};
new Mastra({
  ...configLogger,
  bundler: {
    externals: ["sharp"]
  },
  ...configDeployer
});
const deployer = {};

export { deployer };
"
`;
